--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "install-assets": "xcopy /E /Y /I .\\node_modules\\music-analyzer-wasm-rs\\* .\\public\\music-analyzer-wasm-rs",
+    "update-deps": "yarn upgrade music-analyzer-wasm-rs"
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "fp-ts": "^2.6.5",
+    "music-analyzer-wasm-rs": "file:../music-analyzer-wasm-rs/pkg",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-rx": "^6.2.0",
+    "vuetify": "^2.3.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
@@ -30,11 +36,13 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
+    "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "fibers": "^5.0.0",
     "prettier": "^1.19.1",
-    "sass": "^1.26.5",
+    "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
