--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vue/test-utils": "^1.0.3",
     "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "fibers": "^5.0.0",
@@ -45,6 +46,8 @@
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "~2.0.5",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   }
 }
