--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "xstate": "^4.10.0"
   },
   "devDependencies": {
+    "@open-wc/webpack-import-meta-loader": "^0.4.7",
     "@types/gsap": "^1.20.2",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -44,6 +45,7 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
     "@xstate/test": "^0.4.0",
+    "babel-plugin-transform-import-meta": "^1.0.1",
     "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.11.0",
