Add basic internal lib for detecting music piece by phrase.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vue/composition-api": "^0.6.3",
     "@xstate/vue": "^0.1.1",
     "core-js": "^3.6.5",
+    "edit-distance-search": "^0.1.1",
     "fp-ts": "^2.6.5",
     "gsap": "^3.3.4",
     "music-analyzer-wasm-rs": "file:../music-analyzer-wasm-rs/pkg",
