--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "update-deps": "yarn upgrade music-analyzer-wasm-rs"
   },
   "dependencies": {
-    "@vue/composition-api": "^0.6.3",
-    "@xstate/vue": "^0.1.1",
+    "@vue/composition-api": "^1.0.0-beta.6",
+    "@xstate/vue": "^0.2.0",
     "core-js": "^3.6.5",
     "edit-distance-search": "^0.1.1",
     "fp-ts": "^2.6.5",
@@ -32,9 +32,9 @@
   "devDependencies": {
     "@open-wc/webpack-import-meta-loader": "^0.4.7",
     "@types/gsap": "^1.20.2",
-    "@types/jest": "^24.0.19",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
+    "@types/jest": "^26.0.8",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
     "@vue/cli-plugin-babel": "~4.4.6",
     "@vue/cli-plugin-e2e-cypress": "~4.4.6",
     "@vue/cli-plugin-eslint": "~4.4.6",
@@ -49,14 +49,14 @@
     "@xstate/test": "^0.4.0",
     "babel-plugin-transform-import-meta": "^1.0.1",
     "deepmerge": "^4.2.2",
-    "eslint": "^6.7.2",
+    "eslint": "^7.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "fibers": "^5.0.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.5",
     "sass": "^1.26.8",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^9.0.2",
     "typescript": "~3.9.3",
     "vue-cli-plugin-vuetify": "~2.0.6",
     "vue-template-compiler": "^2.6.11",
